--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -5,10 +5,12 @@ Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.1
+gunicorn==20.1.0
 importlib-metadata==4.8.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+numpy==1.21.2
 passlib==1.7.4
 psycopg2==2.9.1
 python-dateutil==2.8.2
