--- a/contracts/v1.1/brownie-config.yaml
+++ b/contracts/v1.1/brownie-config.yaml
@@ -19,8 +19,10 @@ networks:
 
 dependencies:
   - OpenZeppelin/openzeppelin-contracts@4.4.1
+  - OpenZeppelin/openzeppelin-contracts-upgradeable@4.4.1
 
 compiler:
     solc:
         remappings:
+            - "@openzeppelin-upgradeable=OpenZeppelin/openzeppelin-contracts-upgradeable@4.4.1"
             - "@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.4.1"
